[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "privacy.py"
version = "0.0.0"
description = "A Python lib for Privacy.com"
authors = ["Faster Speeding"]
license = "BSD 3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
pydantic = "1.0"
requests = "2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
flake8 = "3.7.9"