[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "privacy.py"
version = "2019.12.01"
description = "A Python lib for Privacy.com"
authors = ["FasterSpeeding <Luke@lmbyrne.dev>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/FasterSpeeding/Privacy.py"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [
    { include = "privacy" }
]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
pydantic = "1.0"
requests = "2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
flake8 = "3.7.9"
